# azure-agents-cli

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
aza/: api.py  auth.py  cli.py
cli/: package-lock.json  package.json
cli/src/: auth.js  http.js  index.js
cli/src/commands/: agents.js  files.js  runs.js  threads.js  vectorstores.js
cli/src/util/: args.js  dispatch.js  format.js
